
* Additions to core:
    * Custom DOM events. DomCollection#on() treats event names
      containing colons as custom events, and a fire() method
      is provided for notifying observers.

* Bug fixes:
    * DomCollection#set() handles boolean attributes correctly
    * '+' symbols in URLs are now parsed as spaces by Ojay.HTTP

* New packages: Tabs

* Additions to HTTP package:
    * Raw strings can be used as the body for POST requests, e.g.
      Ojay.HTTP.POST('/endpoint', 'request body', { /* callbacks */ })

* Additions to Paginator package:
    * New methods: push(), pop(), shift() and unshift() for
      adding and removing items from Paginators


Version 0.3.1
December 1 2008
================================================================

* Bug fixes:
    * Fixed some layout-related problems with Accordion in
      Internet Explorer.
    * Added ability to pass options to Forms constructors, with
      an option to set the position type used to wrap form
      inputs (wrapperPosition). See Forms documentation for
      more information.


Version 0.3.0
October 31 2008
================================================================

* JS.Class updated to 2.0.2. This does not affect the Ojay API
  but will affect you if you use JS.Class explicitly yourself.
  See http://jsclass.jcoglan.com/upgrade.html

* New packages: Accordion

* Additions to core:
    * Observable now causes and event to bubble up the inheritance
      tree of the object that fired it. So you can listen to all
      instances of Paginator using Ojay.Paginator.on()
    * Multiple CSS selector engines are now supported, and new ones
      can be added fairly easily. Supports W3C API, YUI, Ext,
      Sizzle and Peppy out of the box.
    * New method for animated scrolling: DomCollection#scroll().

* Additions to Forms package:
    * Ojay.Forms.setValue() now selects options in drop-down
      menus based on text content, not just values

* Additions to HTTP package: